--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.3.3",
+    "sweetalert2": "^10.16.6",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
